Try to fix safari gaps

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -58,7 +58,7 @@
     }
     
     section {
-        padding: 2em 4em;
+        padding: 2em 2em;
         margin: 0;
         align-items: center;
         justify-content: center;
@@ -434,10 +434,11 @@
     }
     
     .grid__subcategory--skills {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
+        display: grid;
+        /* flex-wrap: wrap; */
+        /* align-items: center; */
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        justify-items: center;
         gap: 1em;
         padding: 0;
     }
@@ -448,7 +449,7 @@
         /* outline: 1px solid var(--clr-light); */
         background: var(--clr-dark);
         box-shadow: 0px 3px 0px black;
-        max-width: 30%;
+        /* max-width: 30%; */
         min-width: 250px;
         transition: none;
     }
@@ -747,6 +748,7 @@
     }
     
     .list__icon--footer {
-        display: flex;
+        display: grid;
+        grid-auto-flow: column;
         gap: 1em;
     }
